fix: fix could not send old images to server